--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "next": "latest",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
+    "react-codemirror2-react-17": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
   },
